tests/paczka1/fuzzy1/63405450.err
Error in line 1: ZSWLwmVQn0n S756 44,9
Error in line 6: 0WexFxi A616 17,5
Error in line 10: QqxZ5n3qFP S756 7,8
Error in line 12: QqxZ5n3qFP S434 73,1
